samples/wig/should_fail/fix_overwrite.wig
fixedStep chrom=chr1 start=0 step=10
1
2
3
fixedStep chrom=chr1 start=0
1
2
3
